refactor: use standard method